--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -6,5 +6,9 @@
 
 {% block body %}
     <h4>{{ category.name }}</h4>
-    {% include 'job/table.html.twig' with {'jobs': category.activeJobs} only %}
+    {# {% include 'job/table.html.twig' with {'jobs': category.activeJobs} only %} #}
+    {% include 'job/table.html.twig' with {'jobs': activeJobs} only %}
+    <div class="navigation text-center">
+        {{ knp_pagination_render(activeJobs) }}
+    </div>
 {% endblock %}
