--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Jobeet - Your best job board{% endblock %}</title>
+        <title>{% block title %}{{ 'Jobeet - Your best job board'|trans }}{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -11,7 +11,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-primary mb-4">
-            <a class="navbar-brand" href="{{ path('job.list') }}">Jobeet</a>
+            <a class="navbar-brand" href="{{ path('job.list') }}">{{ 'Jobeet'|trans }}</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -25,7 +25,7 @@
                 </ul>
                 <ul class="navbar-nav my-lg-0">
                     <li class="nav-item">
-                        <a class="btn btn-outline-light" href="#">Post a Job</a>
+                        <a class="btn btn-outline-light" href="#">{{ 'Post a Job'|trans }}</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="xnavbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
