Jobeet Day 4: The Controller and the View

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
                 </ul>
                 <ul class="navbar-nav my-lg-0">
                     <li class="nav-item">
-                        <a class="btn btn-outline-light" href="#">{{ 'Post a Job'|trans }}</a>
+                        <a class="btn btn-outline-light" href="{{ path('job_new') }}">{{ 'Post a Job'|trans }}</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="xnavbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
