--- a/templates/job/edit.html.twig
+++ b/templates/job/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('job/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('job_index') }}">back to list</a>
+    <a href="{{ path('job_homepage') }}">back to list</a>
 
     {{ include('job/_delete_form.html.twig') }}
 {% endblock %}
