--- a/templates/job/index.html.twig
+++ b/templates/job/index.html.twig
@@ -14,7 +14,7 @@
             <tr>
                 <td>{{ job.location }}</td>
                 <td>
-                    <a href="#">
+                    <a href="{{ path('job_show', {'id': job.id}) }}">
                         {{ job.position }}
                     </a>
                 </td>
