--- a/templates/job/new.html.twig
+++ b/templates/job/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('job/_form.html.twig') }}
 
-    <a href="{{ path('job_index') }}">back to list</a>
+    <a href="{{ path('job_homepage') }}">back to list</a>
 {% endblock %}
