--- a/templates/job/show.html.twig
+++ b/templates/job/show.html.twig
@@ -32,7 +32,7 @@
 
             <div class="row">
                 <div class="col-sm-12 text-right">
-                    <a class="btn btn-default" href="{{ path('job_index') }}">
+                    <a class="btn btn-default" href="{{ path('job_homepage') }}">
                         <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
                         Back to list
                     </a>
