--- a/templates/job/_form.html.twig
+++ b/templates/job/_form.html.twig
@@ -1,4 +1,8 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+        	<button class="btn btn-primary">{{ button_label|default('Save') }}</button>
+        </div>
+    </div>
 {{ form_end(form) }}
