--- a/templates/job/_form.html.twig
+++ b/templates/job/_form.html.twig
@@ -1,4 +1,5 @@
-{{ form_start(form) }}
+{# {{ form_start(form) }} #}
+{{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
     {{ form_widget(form) }}
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
