--- a/templates/job/show.html.twig
+++ b/templates/job/show.html.twig
@@ -6,6 +6,13 @@
     <h1>Job</h1>
 
     <div class="media" style="margin-top: 60px;">
+        {% if job.logo %}
+            <div class="media-left">
+                <a href="{{ job.url }}" target="_blank">
+                    <img class="media-object" style="width:100px;" src="{{ asset(jobs_web_directory ~ '/' ~ job.logo) }}">
+                </a>
+            </div>
+        {% endif %}
         <div class="media-body">
             <div class="row">
                 <div class="col-sm-10">
