--- a/templates/job/show.html.twig
+++ b/templates/job/show.html.twig
@@ -9,7 +9,7 @@
         {% if job.logo %}
             <div class="media-left">
                 <a href="{{ job.url }}" target="_blank">
-                    <img class="media-object" style="width:100px;" src="{{ asset(jobs_web_directory ~ '/' ~ job.logo) }}">
+                    <img class="media-object" style="width:100px;" src="{{ asset(jobs_web_directory ~ '/' ~ job.logo.filename) }}">
                 </a>
             </div>
         {% endif %}
@@ -44,7 +44,7 @@
                         Back to list
                     </a>
 
-                    <a class="btn btn-primary" href="{{ path('job_edit', {'id': job.id}) }}">
+                    <a class="btn btn-primary" href="{{ path('job_edit', {'token': job.token}) }}">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         Edit
                     </a>
