--- a/templates/job/show.html.twig
+++ b/templates/job/show.html.twig
@@ -3,6 +3,9 @@
 {% block title %}Job{% endblock %}
 
 {% block body %}
+    {% if hasControlAccess is defined and hasControlAccess %}
+        {% include 'job/control_panel.html.twig' with {'job': job} %}
+    {% endif %}
     <h1>Job</h1>
 
     <div class="media" style="margin-top: 60px;">
@@ -43,11 +46,12 @@
                         <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
                         Back to list
                     </a>
-
+                    {#
                     <a class="btn btn-primary" href="{{ path('job_edit', {'token': job.token}) }}">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         Edit
                     </a>
+                    #}
                 </div>
             </div>
         </div>
