--- a/templates/job/control_panel.html.twig
+++ b/templates/job/control_panel.html.twig
@@ -5,6 +5,14 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarControlPanel">
+        {{ form_start(deleteForm, {'attr': {'class': 'form-inline mr-2'}}) }}
+            {{ form_widget(deleteForm) }}
+
+            <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure?')">
+                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                Delete
+            </button>
+        {{ form_end(deleteForm) }}
         <form class="form-inline mr-auto">
             {% if job.activated %}
                 {% if job.expiresAt < date() %}
