--- a/templates/job/show.html.twig
+++ b/templates/job/show.html.twig
@@ -4,7 +4,8 @@
 
 {% block body %}
     {% if hasControlAccess is defined and hasControlAccess %}
-        {% include 'job/control_panel.html.twig' with {'job': job} %}
+        {# {% include 'job/control_panel.html.twig' with {'job': job} %} #}
+        {% include 'job/control_panel.html.twig' with {'job': job, 'deleteForm': deleteForm} %}
     {% endif %}
     <h1>Job</h1>
 
