--- a/templates/job/show.html.twig
+++ b/templates/job/show.html.twig
@@ -5,8 +5,15 @@
 {% block body %}
     {% if hasControlAccess is defined and hasControlAccess %}
         {# {% include 'job/control_panel.html.twig' with {'job': job} %} #}
-        {% include 'job/control_panel.html.twig' with {'job': job, 'deleteForm': deleteForm} %}
+        {# {% include 'job/control_panel.html.twig' with {'job': job, 'deleteForm': deleteForm} %} #}
+        {% include 'job/control_panel.html.twig' with {'job': job, 'deleteForm': deleteForm, 'publishForm': publishForm} only %}
     {% endif %}
+
+    {% for message in app.flashes('notice') %}
+        <div class="alert alert-success" role="alert">
+            {{ message }}
+        </div>
+    {% endfor %}
     <h1>Job</h1>
 
     <div class="media" style="margin-top: 60px;">
