--- a/templates/job/control_panel.html.twig
+++ b/templates/job/control_panel.html.twig
@@ -13,7 +13,7 @@
                 Delete
             </button>
         {{ form_end(deleteForm) }}
-        <form class="form-inline mr-auto">
+        <div class="form-inline mr-auto">
             {% if job.activated %}
                 {% if job.expiresAt < date() %}
                     <span class="navbar-text">Expired</span>
@@ -32,13 +32,16 @@
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     Edit
                 </a>
+                {{ form_start(publishForm, {'attr': {'class': 'navbar-form navbar-left'}}) }}
+                    {{ form_widget(publishForm) }}
 
-                <a class="btn btn-success" href="#">
-                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-                    Publish
-                </a>
+                    <button type="submit" class="btn btn-success">
+                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                        Publish
+                    </button>
+                {{ form_end(publishForm) }}
             {% endif %}
-        </form>
+        </div>
         <form class="form-inline my-2 my-lg-0">
             [Bookmark this <a href="{{ url('job_preview', {token: job.token}) }}">URL</a> to manage this job in the future]
         </form>
