--- a/templates/job/edit.html.twig
+++ b/templates/job/edit.html.twig
@@ -9,5 +9,5 @@
 
     <a href="{{ path('job_homepage') }}">back to list</a>
 
-    {{ include('job/_delete_form.html.twig') }}
+    {#{{ include('job/_delete_form.html.twig') }}#}
 {% endblock %}
