--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -1,44 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>{% block title %}Jobeet - Admin{% endblock %}</title>
+    <head>
+        <title>{% block title %}Jobeet - Admin{% endblock %}</title>
 
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-    {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}{% endblock %}
 
-    {% block javascripts %}{% endblock %}
+        {% block javascripts %}{% endblock %}
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    {#<link rel="stylesheet" href="{{ asset('build/jobeet.css') }}" />#}
-</head>
-<body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Jobeet Admin</a>
+        <link rel="stylesheet" href="{{ asset('build/jobeet.css') }}" />
+    </head>
+    <body>
+        <nav class="navbar navbar-light bg-light mb-5">
+            <a class="navbar-brand" href="#">Jobeet Admin</a>
+        </nav>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2">
+                    <nav class="nav flex-column nav-pills">
+                        <a class="nav-link" href="#">Categories</a>
+                        <a class="nav-link" href="#">Jobs</a>
+                    </nav>
+                </div>
+
+                <div class="col-md-10">
+                    {% block body %}{% endblock %}
+                </div>
             </div>
         </div>
-    </nav>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2">
-                <ul class="nav nav-pills nav-stacked nav-pills-stacked-example">
-                    <li role="presentation">
-                        <a href="#">Categories</a>
-                    </li>
-
-                    <li role="presentation">
-                        <a href="#">Jobs</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="col-md-10">
-                {% block body %}{% endblock %}
-            </div>
-        </div>
-    </div>
-</body>
+    </body>
 </html>
