--- a/templates/admin/category/create.html.twig
+++ b/templates/admin/category/create.html.twig
@@ -3,15 +3,7 @@
 {% block body %}
     <h1>Create new category</h1>
 
-    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
-        {{ form_widget(form) }}
-
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-primary">Save</button>
-            </div>
-        </div>
-    {{ form_end(form) }}
+    {% include 'admin/category/_form.html.twig' with {'form': form} only %}
 
     <a href="{{ path('admin.category.list') }}" class="btn btn-primary">
         <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
