--- a/templates/admin/category/list.html.twig
+++ b/templates/admin/category/list.html.twig
@@ -22,11 +22,15 @@
                 <td>
                     <ul class="list-inline">
                         <li>
-                            <a href="#" class="btn btn-default">Edit</a>
+                            <a href="{{ path('admin.category.edit', {id: category.id}) }}" class="btn btn-default">Edit</a>
                         </li>
 
                         <li>
-                            <a href="#" class="btn btn-danger">Delete</a>
+                            <form method="post" action="{{ path('admin.category.delete', {id: category.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                <input type="hidden" name="_method" value="DELETE">
+                                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
+                                <button class="btn btn-danger">Delete</button>
+                            </form>
                         </li>
                     </ul>
                 </td>
