admin - category page - btn

--- a/templates/admin/category/list.html.twig
+++ b/templates/admin/category/list.html.twig
@@ -22,7 +22,7 @@
                 <td>
                     <ul class="list-inline">
                         <li>
-                            <a href="{{ path('admin.category.edit', {id: category.id}) }}" class="btn btn-default">Edit</a>
+                            <a href="{{ path('admin.category.edit', {id: category.id}) }}" class="btn btn-light">Edit</a>
                         </li>
 
                         <li>
