admin - job page

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -19,8 +19,8 @@
             <div class="row">
                 <div class="col-md-2">
                     <nav class="nav flex-column nav-pills">
-                        <a class="nav-link" href="#">Categories</a>
-                        <a class="nav-link" href="#">Jobs</a>
+                        <a class="nav-link" href="{{ path('admin.category.list') }}">Categories</a>
+                        <a class="nav-link" href="{{ path('admin.job.list') }}">Jobs</a>
                     </nav>
                 </div>
 
