admin - job page - create

--- a/templates/admin/job/list.html.twig
+++ b/templates/admin/job/list.html.twig
@@ -32,7 +32,7 @@
                 <td class="text-nowrap">
                     <ul class="list-inline">
                         <li>
-                            <a href="#" class="btn btn-default">Edit</a>
+                            <a href="#" class="btn btn-light">Edit</a>
                         </li>
 
                         <li>
@@ -49,5 +49,5 @@
         {{ knp_pagination_render(jobs) }}
     </div>
 
-    <a href="#" class="btn btn-success">Create new</a>
+    <a href="{{ path('admin.job.create') }}" class="btn btn-success">Create new</a>
 {% endblock %}
