admin - job page - edit

--- a/templates/admin/job/list.html.twig
+++ b/templates/admin/job/list.html.twig
@@ -32,7 +32,7 @@
                 <td class="text-nowrap">
                     <ul class="list-inline">
                         <li>
-                            <a href="#" class="btn btn-light">Edit</a>
+                            <a href="{{ path('admin.job.edit', {id: job.id}) }}" class="btn btn-light">Edit</a>
                         </li>
 
                         <li>
