--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -18,9 +18,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2">
+                    {% set currentRouteName = app.request.get('_route') %}
+                    {{ currentRouteName }}
                     <nav class="nav flex-column nav-pills">
-                        <a class="nav-link" href="{{ path('admin.category.list') }}">Categories</a>
-                        <a class="nav-link" href="{{ path('admin.job.list') }}">Jobs</a>
+                        <a class="nav-link {% if currentRouteName starts with 'admin.category.' %}active{% endif %}" href="{{ path('admin.category.list') }}">Categories</a>
+                        <a class="nav-link {% if currentRouteName starts with 'admin.job.' %}active{% endif %}" href="{{ path('admin.job.list') }}">Jobs</a>
                     </nav>
                 </div>
 
