admin - job page - add img to edit form

--- a/templates/job/edit.html.twig
+++ b/templates/job/edit.html.twig
@@ -2,6 +2,18 @@
 
 {% block title %}Edit Job{% endblock %}
 
+{# Wyświetlenie obrazka #}
+{% form_theme form _self %}
+
+{% block _job_logo_widget %}
+    {% if form.vars.data %}
+        <img class="media-object" style="width:100px;" src="{{ asset(jobs_web_directory ~ '/' ~ form.vars.data.filename) }}">
+    {% endif %}
+
+    {{ form_widget(form) }}
+{% endblock %}
+{# End Wyświetlenie obrazka #}
+
 {% block body %}
     <h1>Edit Job</h1>
 
