session jobeet user

--- a/templates/job/index.html.twig
+++ b/templates/job/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Job index{% endblock %}
 
 {% block body %}
+    {% include 'job/_job_history.html.twig' with {'historyJobs': historyJobs} only %}
     {% for category in categories %}
         <h4><a href="{{ path('category_show', {slug: category.slug}) }}">{{ category.name }}</a></h4>
         {% include 'job/_table.html.twig' with {
