--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+	{% include 'job/_job_history.html.twig' with {'historyJobs': historyJobs} only %}
     <h4>{{ category.name }}</h4>
     {% include 'job/_table.html.twig' with {'jobs': activeJobs} only %}
     <div class="navigation text-center">
