--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -7,13 +7,23 @@
 
         {% block stylesheets %}{% endblock %}
 
-        {% block javascripts %}{% endblock %}
-
         <link rel="stylesheet" href="{{ asset('build/jobeet.css') }}" />
     </head>
     <body>
-        <nav class="navbar navbar-light bg-light mb-5">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
             <a class="navbar-brand" href="#">Jobeet Admin</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                </ul>
+                <ul class="navbar-nav my-lg-0">
+                    <li class="nav-item">
+                        {#<a class="nav-link" href="{{ path('app_logout') }}">{{ 'Logout'|trans }}</a>#}
+                    </li>
+                </ul>
+            </div>
         </nav>
         <div class="container">
             <div class="row">
@@ -30,6 +40,8 @@
                     {% block body %}{% endblock %}
                 </div>
             </div>
+            {% block javascripts %}{% endblock %}
+            <script src="{{ asset('build/jobeet.js') }}"></script>
         </div>
     </body>
 </html>
