--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,8 +30,20 @@
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav my-lg-0">
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li class="nav-item">
+                            <a href="{{ path('admin.category.list') }}" class="nav-link">Admin Panel</a>
+                        </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="btn btn-outline-light" href="{{ path('job_new') }}">{{ 'Post a Job'|trans }}</a>
+                    </li>
+                    <li class="nav-item">
+                        {% if is_granted('ROLE_USER') %}
+                            <a class="nav-link" href="{{ path('fos_user_security_logout') }}">Logout</a>
+                        {% else %}
+                            <a class="nav-link" href="{{ path('fos_user_security_login') }}">Sign in</a>
+                        {% endif %}
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="xnavbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
