--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,7 +32,7 @@
                 <ul class="navbar-nav my-lg-0">
                     {% if is_granted('ROLE_ADMIN') %}
                         <li class="nav-item">
-                            <a href="{{ path('admin.category.list') }}" class="nav-link">Admin Panel</a>
+                            <a href="{{ path('admin.category.list') }}" class="nav-link">{{ 'Admin Panel'|trans }}</a>
                         </li>
                     {% endif %}
                     <li class="nav-item">
@@ -40,9 +40,9 @@
                     </li>
                     <li class="nav-item">
                         {% if is_granted('ROLE_USER') %}
-                            <a class="nav-link" href="{{ path('fos_user_security_logout') }}">Logout</a>
+                            <a class="nav-link" href="{{ path('fos_user_security_logout') }}">{{ 'Logout'|trans }}</a>
                         {% else %}
-                            <a class="nav-link" href="{{ path('fos_user_security_login') }}">Sign in</a>
+                            <a class="nav-link" href="{{ path('fos_user_security_login') }}">{{ 'Sign in'|trans }}</a>
                         {% endif %}
                     </li>
                     <li class="nav-item dropdown">
