--- a/templates/affiliate/create.html.twig
+++ b/templates/affiliate/create.html.twig
@@ -8,7 +8,7 @@
 
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Create</button>
+                <button type="submit" class="btn btn-light">Create</button>
             </div>
         </div>
     {{ form_end(form) }}
