--- a/templates/affiliate/wait.html.twig
+++ b/templates/affiliate/wait.html.twig
@@ -1,11 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="jumbotron">
-        <h3 class="text-center">
+    <div class="jumbotron text-center">
+        <h3>
             <b>Your affiliate account has been created</b>
         </h3>
-
         <p>Thank you! You will receive an email with your affiliate token as soon as your account will be activated.</p>
     </div>
 {% endblock %}
