--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,7 +35,10 @@
                             <a href="{{ path('admin.category.list') }}" class="nav-link">{{ 'Admin Panel'|trans }}</a>
                         </li>
                     {% endif %}
-                    <li class="nav-item">
+                    <li class="nav-item mr-2">
+                        <a class="btn btn-outline-light" href="{{ path('affiliate.create') }}">{{ 'Affiliates'|trans }}</a>
+                    </li>
+                    <li class="nav-item mr-2">
                         <a class="btn btn-outline-light" href="{{ path('job_new') }}">{{ 'Post a Job'|trans }}</a>
                     </li>
                     <li class="nav-item">
