--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -30,6 +30,7 @@
                 <div class="col-md-2">
                     {% set currentRouteName = app.request.get('_route') %}
                     <nav class="nav flex-column nav-pills">
+                        <a class="nav-link {% if currentRouteName starts with 'admin.affiliate.' %}active{% endif %}" href="{{ path('admin.affiliate.list') }}">Affiliates</a>
                         <a class="nav-link {% if currentRouteName starts with 'admin.category.' %}active{% endif %}" href="{{ path('admin.category.list') }}">Categories</a>
                         <a class="nav-link {% if currentRouteName starts with 'admin.job.' %}active{% endif %}" href="{{ path('admin.job.list') }}">Jobs</a>
                     </nav>
